update default vars

--- a/charts/patroni/templates/statefulset.yaml
+++ b/charts/patroni/templates/statefulset.yaml
@@ -113,6 +113,8 @@ spec:
               value: "500"
             - name: POSTGRESQL_MAX_PREPARED_TRANSACTIONS
               value: "500"
+            - name: POSTGRESQL_LISTEN_ADDRESSES
+              value: "*"
           lifecycle:
             preStop:
               exec:
